# RAG_project

./: .gitignore  App.jsx  Dockerfile  FEATURES_INTRO.txt  MANUAL.md  README.md  SPECIFICATION.md  TEAM_SHARING.md  USER_MANUAL.txt  app.py  cache.db  docker-compose.yml  evaluation_log.jsonl  main.py  package-lock.json  pyproject.toml  rag_sample_public.py  repro_intent.py  requirements.txt  research_abstract.md  start.bat  start.sh  test_e2e.py
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
chroma_db/: chroma.sqlite3
my-rag-app/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
my-rag-app/src/: App.jsx  index.css
ragenv/: pyvenv.cfg
scripts/: check_chroma_db.py  check_lmstudio.py  check_spec_exists.py  create_test_pdf.py  generate_test_data.py  index_spec.py  rag_qwen.py  rag_qwen7b.py  rag_qwen_debug.py  rag_qwen_lmstudio.py  rag_qwen_lmstudio_context_full.py  rag_qwen_lmstudio_duck.py  rag_qwen_lmstudio_duck_direct.py  rag_qwen_lmstudio_duck_improved.py  rag_qwen_lmstudio_duck_rag.py  rag_qwen_lmstudio_duck_rag_cleaned_ddgs_unique.py  rag_qwen_lmstudio_duck_rag_final.py  rag_qwen_lmstudio_fixed.py  rag_qwen_rag.py  rag_qwen_rag_dedup.py  rag_qwen_rag_extended.py  rag_qwen_rag_fixed.py  rag_qwen_rag_improved.py  rag_qwen_rag_interactive.py  rag_qwen_ultimate.py  rag_qwen_ultimate.py.bak  rag_server.py  test_lmstudio_api.py  test_rag_client.py  test_rag_parallel.py  test_rename.py  verify_chat_intent.py
scripts/tests/: test_chroma.py  test_chroma_search.py  (+5 more)
static/: app.js  style.css
templates/: index.html
(+18 files in other folders)
