[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.121.0",
    "numpy>=2.4.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.3",
    "pypdf>=6.6.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.21",
    "python-pptx>=1.0.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
